--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="outerbox"> 
     <div class="calendar">Calendar</div> 
-    <div class="date">date</div> 
+    <div class="date">27.05.2023</div> 
 </div>
 
 <div class="right-arrow">
